# hls-cookbook

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: recipe.yml
.github/aw/: actions-lock.json
.github/workflows/: build-cookbook.yml  ci.yml  ingest-recipe.lock.yml  ingest-recipe.md  validate-recipes.yml
book/: __init__.py  build_book.py  chapter.typ.j2  recipe.typ  render.py  repo_source.py  sample.typ  template.typ
book/fixtures/: recipes.json
data/: ingredients.yaml
docs/: architecture.md  recipe-submission-guide.md
hls/: __init__.py  cli.py  ingredients_yaml.py  normalize.py  repo_source.py  validate.py
hls/models/: __init__.py  ingredient_master.py  recipe.py  units.py
hls/nutrition/: __init__.py  aggregate.py
hls/units/: __init__.py  convert.py  parser.py  registry.py  types.py
recipes/caesar-salad/: recipe.yaml
recipes/chicken-adobo/: recipe.yaml
recipes/dark-chocolate-brownies/: recipe.yaml
recipes/pao-de-queijo/: recipe.pt-BR.yaml  recipe.yaml
tests/: __init__.py  test_book_build.py  test_ingredients_yaml.py  test_models.py  test_normalize.py  test_nutrition.py  test_repo_source.py  test_units.py  test_validate.py
