[project]
name = "hls-cookbook"
version = "0.2.0"
description = "HLS Cookbook — Hot Lunch Society. Git-native recipe collection that publishes a printed cookbook via GitHub Actions."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hot Lunch Society" }]
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pint>=0.24",
    "python-ulid>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML",
]

[project.scripts]
hls = "hls.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hls", "book"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "B",               # flake8-bugbear
    "UP",              # pyupgrade
    "SIM",             # flake8-simplify
    "RUF",             # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["pint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
